<resources>
    <string name="app_name">EzFix</string>
    <!-- Strings relacionadas ao login -->
    <string name="str_btn_cadastrese">Cadastre-se!</string>
    <string name="str_btn_entrar">Entrar</string>
    <string name="str_gf">Ou entre com e-mail</string>

    <!-- Strings relacionadas ao cadastro  -->
    <!--    CONTA-->
    <string name="str_email">Email</string>
    <string name="str_senha">Senha</string>
    <string name="str_conSenha">Confirme sua senha</string>
    <!--    DADOS PESSOAIS-->
    <string name="str_nome">Nome completo</string>
    <string name="str_cpf">CPF</string>
    <string name="str_nascimento">Data de nascimento</string>
    <string name="str_telPrimario">Telefone primário</string>
    <string name="str_telSecundario">Telefone Secundário</string>
    <!--    Endereço-->
    <string name="str_cep">CEP</string>
    <string name="str_logradouro">Logradouro</string>
    <string name="str_numero">Nº</string>
    <string name="str_complemento">Complemento</string>
    <string name="str_bairro">Bairro</string>
    <string name="str_cidade">Cidade</string>
    <string name="str_estado">Estado</string>

    <!--    CERTIFICADO-->
    <string name="cert_data_fim">Data fim:</string>
    <string name="cert_data_inicio">Data início:</string>
    <string name="cert_carga_horaria">Carga horária:</string>
    <!--    ORÇAMENTO-->
    <string name="orc_titulo1">Adicione os itens</string>
    <string name="orc_produto">Produto</string>
    <string name="orc_marca">Marca</string>
    <string name="orc_modelo">Modelo</string>
    <string name="orc_problema">Problema</string>
    <string name="orc_observacao">Observação</string>
    <string name="orc_titulo2">Adicione os itens</string>

    <string name="erro_campo">Campo Obrigatório</string>
    <string name="str_btn_concluir">Concluir</string>
    <string name="str_btn_adicionar">Adicionar</string>
    <string name="btn_detalhes">detalhes</string>
    <string name="data_pedido">Data do pedido:</string>
    <string name="subtotal">Subtotal</string>
    <string name="frete">Frete</string>
    <string name="total">Total</string>
    <string name="recusar">recusar</string>
    <string name="confirmar">confirmar</string>
    <string name="nao_cadastrado">Ainda não tem cadastro?</string>
    <string name="efetuar_cadastro">efetuar cadastro</string>

    <!--    Relacionadas ao MENU-->
    <string name="menu_buscar">Buscar</string>
    <string name="menu_inicio">Início</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="id_pedido">Pedido</string>
    <string name="resumo">Resumo</string>

    <string name="entragar_retirar">Entregar e retirar pessoalmente</string>
    <string name="btn_finalizar">finalizar</string>
    <!--    ANDAMENTO PEDIDO-->
    <string name="entregue_equipamento">Equipamento entregue</string>
    <string name="pedido_pronto">Pedido pronto</string>
    <string name="pedido_retirado">Pedido retirado</string>
    <string name="avaliacao">Avaliação</string>
    <string name="avaliar">Avaliar</string>

    <!--STATUS PEDIDO-->
    <string name="aguardando_tecnico">aguardando resposta tecnico</string>
    <string name="aguardando_solicitante">aguardando sua resposta</string>
    <string name="aguardando_envio">aguardando envio</string>
    <string name="reparo_andamento">reparo em andamento</string>
    <string name="reparo_concluido">reparo conluido</string>
    <string name="aguardando_avaliacao">aguardando avalicao</string>
    <string name="concluido">concluido</string>

    <string name="comentario">comentário</string>
    <string name="enviar">enviar</string>
    <string name="orcamento">Novo orçamento</string>
    <string name="busca">Buscar assistência</string>

</resources>