<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAndamentoPedido">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar"
            app:titleTextColor="@color/blue"
            android:elevation="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

<!--STEP1-->
            <ImageView
                android:id="@+id/circle_step1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:src="@drawable/ic_check" />


            <TextView
                android:id="@+id/tv_step1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/circle_step1"
                app:layout_constraintTop_toTopOf="@id/circle_step1"
                app:layout_constraintBottom_toBottomOf="@id/circle_step1"
                android:text="@string/entregue_equipamento"/>


            <View
                android:id="@+id/vline_step1"
                android:layout_width="5dp"
                android:layout_height="100dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/circle_step1"
                app:layout_constraintLeft_toLeftOf="@id/circle_step1"
                app:layout_constraintRight_toRightOf="@id/circle_step1"/>

<!--STEP2-->
        <ImageView
            android:id="@+id/circle_step2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/vline_step1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_check"/>


        <TextView
            android:id="@+id/tv_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/circle_step2"
            app:layout_constraintTop_toTopOf="@id/circle_step2"
            app:layout_constraintBottom_toBottomOf="@id/circle_step2"
            android:text="@string/pedido_pronto"/>


        <View
            android:id="@+id/vline_step2"
            android:layout_width="5dp"
            android:layout_height="100dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/circle_step2"
            app:layout_constraintLeft_toLeftOf="@id/circle_step2"
            app:layout_constraintRight_toRightOf="@id/circle_step2"/>

<!--STEP3-->
        <ImageView
            android:id="@+id/circle_step3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_check"
            app:layout_constraintTop_toBottomOf="@id/vline_step2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/tv_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/circle_step3"
            app:layout_constraintTop_toTopOf="@id/circle_step3"
            app:layout_constraintBottom_toBottomOf="@id/circle_step3"
            android:text="@string/pedido_retirado"/>


        <View
            android:id="@+id/vline_step3"
            android:layout_width="5dp"
            android:layout_height="100dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/circle_step3"
            app:layout_constraintLeft_toLeftOf="@id/circle_step3"
            app:layout_constraintRight_toRightOf="@id/circle_step3"/>

        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/tv_step3"
            app:layout_constraintLeft_toLeftOf="@id/tv_step3"
            android:text="@string/confirmar"
            android:visibility="gone"/>

<!--STEP4-->
        <ImageView
            android:id="@+id/circle_step4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/vline_step3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_check"/>

        <TextView
            android:id="@+id/tv_step4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/circle_step4"
            app:layout_constraintTop_toTopOf="@id/circle_step4"
            app:layout_constraintBottom_toBottomOf="@id/circle_step4"
            android:text="@string/avaliacao"/>

        <Button
            android:id="@+id/btn_avaliacao"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/tv_step4"
            app:layout_constraintLeft_toLeftOf="@id/tv_step4"
            android:text="@string/avaliar"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>